Update: fixed bug of overlaping section on small devices

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -25,8 +25,10 @@
   src: url(../assets/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf);
 }
 
-html {
-  height: 100vh;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;      /* body fills viewport */
 }
 
 body {
@@ -35,7 +37,6 @@ body {
     open-sans,
     system-ui,
     -apple-system !important;
-  height: 100%;
 }
 
 // ===LOGIN AND SIGNUP PAGE===
@@ -236,6 +237,7 @@ body#main {
 }
 #main header {
   background-color: white;
+  flex: 0 0 auto;
 }
 #max-width {
   display: flex;
@@ -248,7 +250,6 @@ body#main {
 // ===HEADER AND SIDEBAR SECTION===
 
 #header-btn-container {
-  
   display: none;
 }
 
@@ -262,13 +263,15 @@ body#main {
 
   width: min(100%, 1000px);
   margin: 0 auto;
-  padding: 0 0 1.5rem 0;
-  height: 100vh;
+  padding: .5rem 0 1.5rem 0;
+
+  flex: 1 0 auto;
   
 }
 #main footer {
   background-color: white;
   min-height: 100px;
+  flex: 0 0 auto;
 }
 nav,
 button,
@@ -363,25 +366,28 @@ nav.visible {
 
 // ===MAIN CONTENT OF THE PAGE===
 
+
 #book-collection {
   height: 85%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: -1rem 1rem;
+  margin: 1rem 1rem;
 }
 
 .glide__track {
   margin: auto;
 }
 
-curr-user
+.first-glide {
+  padding: .25rem 1.25rem;
+}
 
 .glide {
   background-color: #dddddd;
   border-radius: 5px;
 
-  padding: 0.5rem 1rem;
+  // padding: 0.5rem 1rem;
   min-height: 100px;
 
   display: flex;
@@ -393,7 +399,7 @@ curr-user
   border-radius: 5px;
 
   min-width: 100px; /* or % */
-  flex-shrink: 0;
+  // flex-shrink: 0;
 
   display: flex;
   align-items: center;
